Refactoring, MusicbrainzIntegration change