@@ -1,19 +1,15 @@
 package com.vance.lib.util;
 
 import com.vance.lib.ChartDataProvider;
+import org.apache.commons.io.IOUtils;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 
-import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.stream.Collectors;
 
+import static java.nio.charset.Charset.defaultCharset;
 import static java.util.Optional.ofNullable;
 import static org.slf4j.LoggerFactory.getLogger;
 
@@ -58,14 +54,8 @@ public class FileUtil {
 
         final InputStream inputStream = ofNullable(clazz.getResourceAsStream(name))
                 .orElseThrow(() -> new IOException("Failed to open file " + name));
-        String result = new BufferedReader(new InputStreamReader(inputStream)).lines().collect(Collectors.joining());
-        inputStream.close();
-
-        return result;
-
-//        final URL resource = ofNullable(clazz.getResource(name)).orElseThrow(() ->
-//                new IOException("Failed to locate file " + name));
-        // TODO: Получаю ошибку типа "Provided jar is not installed"
-//        return Files.readString(Paths.get(resource.toURI()).toAbsolutePath());
+        try (inputStream) {
+            return IOUtils.toString(inputStream, defaultCharset());
+        }
     }
 }
